--- a/themes/flatgroup/scss/base/_variables.scss
+++ b/themes/flatgroup/scss/base/_variables.scss
@@ -97,5 +97,6 @@ $kui-shadow-100: 0px 2px 8px 0px rgba(26, 26, 26, .16);
 $kui-theme: #1c2637;
 
 $kui-disabled: #f3f3f3;
-$kui-disabled-500: #5e5e5e;
+$kui-disabled-500: #8e939c;
 $kui-disabled-border: #e2e3e6;
+$kui-disabled-border-500: #d3d5d9;
