--- a/themes/flatgroup/scss/components/_advanced-filters.scss
+++ b/themes/flatgroup/scss/components/_advanced-filters.scss
@@ -99,10 +99,10 @@
         p {
           position: absolute;
           left: 15%;
-          margin: 0 0 2px 0;
+          margin: 0;
           color: $black-color-500;
-          font-size: 21px;
-          font-weight: 400;
+          font-size: 17px;
+          font-weight: 500;
           line-height: 1.32;
           overflow: hidden;
           text-align: center;
@@ -178,7 +178,7 @@
 
                   &.selected {
                     color: $kui-theme;
-                    box-shadow: inset 0 0 0 1.4px $kui-green-highlight;
+                    box-shadow: inset 0 0 0 1.8px $kui-theme;
                     background: $pure-white;
                     transform: scale(1);
                     animation: bounceBack 0.3s ease;
@@ -283,7 +283,7 @@
                   background-color: $kui-disabled;
                   padding: 10px 15px;
                   font-size: 17px;
-                  color: $kui-disabled-500;
+                  color: $kui-theme;
                   height: 48px;
                   border: none;
                   border-radius: 4px;
