--- a/themes/flatgroup/scss/main.css
+++ b/themes/flatgroup/scss/main.css
@@ -150,7 +150,7 @@ button {
   font-size: 14.4px;
   border: 1px solid #8e939c;
   border-radius: 4px;
-  color: #212121;
+  color: #121828;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -161,7 +161,7 @@ button {
   height: auto;
 }
 #search-bar-wrapper .container .flex .filters-trigger button svg path {
-  stroke: #212121;
+  stroke: #121828;
   stroke-width: 1.8;
 }
 #search-bar-wrapper .container .flex .filters-trigger button:nth-child(3) svg path {
@@ -171,7 +171,7 @@ button {
   margin-left: 3px;
   font-weight: 700;
   color: #FFF;
-  background: #212121;
+  background: #121828;
   border-radius: 5px;
   height: 17px;
   width: 17px;
@@ -317,10 +317,10 @@ button {
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__nav p {
   position: absolute;
   left: 15%;
-  margin: 0 0 2px 0;
+  margin: 0;
   color: #212121;
-  font-size: 21px;
-  font-weight: 400;
+  font-size: 17px;
+  font-weight: 500;
   line-height: 1.32;
   overflow: hidden;
   text-align: center;
@@ -384,8 +384,8 @@ button {
   transition: transform 0.1s ease;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons button.selected {
-  color: #212121;
-  box-shadow: inset 0 0 0 1.4px #55b401;
+  color: #121828;
+  box-shadow: inset 0 0 0 1.8px #121828;
   background: #FFF;
   transform: scale(1);
   animation: bounceBack 0.3s ease;
@@ -439,7 +439,7 @@ button {
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .status-checkbox .status-checkbox-box {
   width: 22px;
   height: 22px;
-  border: 2px solid #212121;
+  border: 2px solid #121828;
   border-radius: 4px;
   margin-right: 10px;
   transition: border-color 0.3s ease, background-color 0.3s ease;
@@ -460,8 +460,8 @@ button {
   transition: opacity 0.3s ease;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .status-checkbox input[type=checkbox]:checked + .status-checkbox-box {
-  background-color: #212121;
-  border-color: #212121;
+  background-color: #121828;
+  border-color: #121828;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__buttons .status-checkbox input[type=checkbox]:checked + .status-checkbox-box::after {
   opacity: 1;
@@ -473,7 +473,7 @@ button {
   background-color: #f3f3f3;
   padding: 10px 15px;
   font-size: 17px;
-  color: #8e939c;
+  color: #121828;
   height: 48px;
   border: none;
   border-radius: 4px;
@@ -494,7 +494,7 @@ button {
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content {
   display: none;
   position: absolute;
-  border-top: 2px solid #212121;
+  border-top: 2px solid #121828;
   background-color: #f3f3f3;
   width: 100%;
   z-index: 1;
@@ -520,14 +520,14 @@ button {
   width: 20px;
   height: 20px;
   border-radius: 4px;
-  border: 2px solid #212121;
+  border: 2px solid #121828;
   position: relative;
   margin-right: 10px;
   cursor: pointer;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item input[type=checkbox]:checked {
-  background-color: #212121;
-  border-color: #212121;
+  background-color: #121828;
+  border-color: #121828;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item input[type=checkbox]:checked::after {
   content: "";
@@ -543,7 +543,7 @@ button {
   transition: opacity 0.3s ease;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__dropdown .advancedFilters__dropdown-content .advancedFilters__dropdown-item input[type=checkbox]:hover {
-  border-color: #212121;
+  border-color: #121828;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__double-dropdown {
   display: flex;
@@ -572,7 +572,7 @@ button {
   box-shadow: none;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-connects .noUi-connect {
-  background: #212121;
+  background: #121828;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-origin .noUi-handle {
   width: 24px;
@@ -581,7 +581,7 @@ button {
   border-radius: 50px;
   box-shadow: none;
   background: #FFF;
-  border: 2px solid #212121;
+  border: 2px solid #121828;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-origin .noUi-handle::before, #advancedFilters .advancedFilters__box #advancedFilters__content .container .advancedFilters__parameters #search-form__filter .advancedFilters__parameters__container .advancedFilters__parameters__noUi .slider-content-size #slider-range .noUi-base .noUi-origin .noUi-handle::after {
   display: none;
@@ -692,7 +692,7 @@ button {
   justify-content: space-between;
 }
 #advancedFilters .advancedFilters__box #advancedFilters__content .advancedFilters__footer .advancedFilters__buttons__container .advancedFilters__search__button {
-  background: #212121;
+  background: #121828;
   padding: 7px 12px;
   font-weight: 600;
   border-radius: 4px;
