filter cosmetic changes

--- a/themes/flatgroup/scss/base/_variables.scss
+++ b/themes/flatgroup/scss/base/_variables.scss
@@ -92,14 +92,14 @@ $theme-blue: #006ce4;
 
 
 $kui-shadow-100: 0px 2px 8px 0px rgba(26, 26, 26, .16);
-// $kui-theme: #a67f5f;
-// $kui-theme: #007e8a;
-// $kui-theme: #002f34;
-$kui-theme: #121828;
+
+$kui-theme: #7ebd0d;
+$kui-theme-dark: #102838;
 $kui-green-highlight: #55b401;
 
 $kui-white: white;
-$kui-disabled: #f3f3f3;
+$kui-black: #212121;
+$kui-disabled: #f2f4f5;
 $kui-disabled-200: #e4e4e7;
 $kui-disabled-500: #8e939c;
 $kui-disabled-600: #848485;
