--- a/themes/flatgroup/scss/components/_advanced-filters.scss
+++ b/themes/flatgroup/scss/components/_advanced-filters.scss
@@ -86,7 +86,7 @@
           margin-left: 20px;
 
           svg {
-            width: 27px;
+            width: 23px;
             height: auto;
 
             path {
@@ -390,6 +390,29 @@
                     &.is-open {
                       .selectedSize__indicator {
                         transform: rotate(180deg);
+                      }
+                    }
+                  }
+
+                  .advancedFilters__dropdown-content {
+                    .advancedFilters__dropdown-item {
+                      position: relative;
+
+                      &::after {
+                        content: '';
+                      }
+
+                      &.selected::after {
+                        display: block;
+                        position: absolute;
+                        right: 10px;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        width: 15px;
+                        height: 12px;
+                        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12" fill="none"><path d="M1 6L5.24264 10.2426L13.727 1.75732" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>');
+                        background-repeat: no-repeat;
+                        background-size: contain;
                       }
                     }
                   }
